# Novick-Martinez-Ezekiel-Examen-C-

./: CMakeLists.txt  Main.cpp  Main.h  README.md
Ejercicio 1/: Identificacion.cpp  Identificacion.h
Ejercicio 2/: dia.cpp  dia.h
Ejercicio 3/: Promedio.cpp  Promedio.h
Ejercicio 4/: Promocion.cpp  Promocion.h
